dark mode fix attempt on vercel deployment

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -2598,10 +2598,6 @@ details.collapse summary::-webkit-details-marker {
   position: absolute;
 }
 
-.relative {
-  position: relative;
-}
-
 .bottom-3 {
   bottom: 0.75rem;
 }
@@ -2656,10 +2652,6 @@ details.collapse summary::-webkit-details-marker {
 
 .grid {
   display: grid;
-}
-
-.hidden {
-  display: none;
 }
 
 .h-10 {
@@ -2755,15 +2747,6 @@ details.collapse summary::-webkit-details-marker {
   min-height: 100%;
 }
 
-.min-h-max {
-  min-height: -moz-max-content;
-  min-height: max-content;
-}
-
-.min-h-\[50vw\] {
-  min-height: 50vw;
-}
-
 .w-1\/2 {
   width: 50%;
 }
@@ -2784,10 +2767,6 @@ details.collapse summary::-webkit-details-marker {
   width: 50%;
 }
 
-.w-36 {
-  width: 9rem;
-}
-
 .w-5\/6 {
   width: 83.333333%;
 }
@@ -2804,8 +2783,16 @@ details.collapse summary::-webkit-details-marker {
   width: 25vw;
 }
 
+.w-\[27vw\] {
+  width: 27vw;
+}
+
 .w-\[35vw\] {
   width: 35vw;
+}
+
+.w-\[50\%\] {
+  width: 50%;
 }
 
 .w-\[60vw\] {
@@ -2822,39 +2809,6 @@ details.collapse summary::-webkit-details-marker {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
-}
-
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.w-\[100\%\] {
-  width: 100%;
-}
-
-.w-\[50vw\] {
-  width: 50vw;
-}
-
-.w-\[27vw\] {
-  width: 27vw;
-}
-
-.min-w-\[50vw\] {
-  min-width: 50vw;
-}
-
-.min-w-full {
-  min-width: 100%;
 }
 
 .min-w-max {
@@ -3115,11 +3069,6 @@ details.collapse summary::-webkit-details-marker {
   border-color: var(--fallback-b3,oklch(var(--b3)/var(--tw-border-opacity)));
 }
 
-.border-base-content {
-  --tw-border-opacity: 1;
-  border-color: var(--fallback-bc,oklch(var(--bc)/var(--tw-border-opacity)));
-}
-
 .border-slate-300 {
   --tw-border-opacity: 1;
   border-color: rgb(203 213 225 / var(--tw-border-opacity));
@@ -3153,16 +3102,6 @@ details.collapse summary::-webkit-details-marker {
   background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity)));
 }
 
-.bg-blue-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
-}
-
-.bg-orange-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 186 116 / var(--tw-bg-opacity));
-}
-
 .bg-slate-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
@@ -3186,16 +3125,6 @@ details.collapse summary::-webkit-details-marker {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-10 {
@@ -3395,6 +3324,11 @@ details.collapse summary::-webkit-details-marker {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:bg-red-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-slate-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(148 163 184 / var(--tw-bg-opacity));
@@ -3408,21 +3342,6 @@ details.collapse summary::-webkit-details-marker {
 .hover\:bg-violet-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(91 33 182 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-red-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-red-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
-.hover\:text-2xl:hover {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .hover\:text-teal-500:hover {
@@ -3465,75 +3384,75 @@ details.collapse summary::-webkit-details-marker {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.dark\:border-slate-600:where(.dark, .dark *) {
+.dark\:border-slate-600:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(71 85 105 / var(--tw-border-opacity));
 }
 
-.dark\:border-white:where(.dark, .dark *) {
+.dark\:border-white:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.dark\:border-opacity-\[4\%\]:where(.dark, .dark *) {
+.dark\:border-opacity-\[4\%\]:is(.dark *) {
   --tw-border-opacity: 4%;
 }
 
-.dark\:bg-slate-300:where(.dark, .dark *) {
+.dark\:bg-slate-300:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-slate-700:where(.dark, .dark *) {
+.dark\:bg-slate-700:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-slate-800:where(.dark, .dark *) {
+.dark\:bg-slate-800:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-slate-900:where(.dark, .dark *) {
+.dark\:bg-slate-900:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-white:where(.dark, .dark *) {
+.dark\:bg-white:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-opacity-10:where(.dark, .dark *) {
+.dark\:bg-opacity-10:is(.dark *) {
   --tw-bg-opacity: 0.1;
 }
 
-.dark\:text-green-300:where(.dark, .dark *) {
+.dark\:text-green-300:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(134 239 172 / var(--tw-text-opacity));
 }
 
-.dark\:text-red-300:where(.dark, .dark *) {
+.dark\:text-red-300:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(252 165 165 / var(--tw-text-opacity));
 }
 
-.dark\:text-violet-400:where(.dark, .dark *) {
+.dark\:text-violet-400:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(167 139 250 / var(--tw-text-opacity));
 }
 
-.dark\:text-white:where(.dark, .dark *) {
+.dark\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.dark\:hover\:bg-slate-950:hover:where(.dark, .dark *) {
+.dark\:hover\:bg-slate-950:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(2 6 23 / var(--tw-bg-opacity));
 }
 
-.hover\:dark\:text-teal-400:where(.dark, .dark *):hover {
+.hover\:dark\:text-teal-400:is(.dark *):hover {
   --tw-text-opacity: 1;
   color: rgb(45 212 191 / var(--tw-text-opacity));
 }
